(style) fixed alignment issues on mobile

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
 body {
     background-color: var(--lm-bg-col);
     display: flex;
+
+    flex-wrap: wrap;
+    
     justify-content: center;
     align-items: center;
     height: 95%;
@@ -29,7 +32,7 @@ body {
 .container {
     width: 95%;
     background-color: var(--lm-container-bg-col);
-    padding: 30px;
+    padding: 1%/*30px*/;
     box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1); /* TODO: Consider glow from text-shaddow */
     border-radius: 20px;
 }
@@ -42,6 +45,7 @@ body {
     align-items: center;
     border-bottom: 2px solid var(--lm-light-bg-col);
     position: relative;
+    overflow-x: auto;
 }
 .tab-box .tab-btn {
     font-size: 18px;
@@ -51,8 +55,8 @@ body {
     border: none;
     padding-top: 18px;
     padding-bottom: 18px;
-    padding-left: 0.75%;
-    padding-right: 0.75%;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
     cursor: pointer;
 }
 .tab-box .tab-btn.active {
@@ -153,6 +157,7 @@ h2 {
     justify-content: center;
     align-items: center;
     height: auto;
+    overflow-x: scroll;
 }
 .aboutus-con {
     padding: 20px;
@@ -177,6 +182,7 @@ h2 {
     justify-content: center;
     align-items: center;
     height: max-content;
+    width: inherit;
 }
 
 .trainer1 {
@@ -320,6 +326,7 @@ h2 {
     list-style-type: none;
     padding-top: 2%;
     padding-bottom: 4%;
+    overflow-x: auto;
 }
 .map {
     display: flex;
